<resources>
    <string name="app_name">DiBi</string>
    <string name="verifyLimit">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ+-*/#</string>
    <string name="passwordLimit">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="numDecimalLimit">0123456789.</string>
    <string name="numberLimit">0123456789</string>
    <string name="homeTab0">首页</string>
    <string name="homeTab1">行情</string>
    <string name="homeTab2">法币</string>
    <string name="homeTab3">币币</string>
    <string name="homeTab4">资产</string>
    <string name="permDeny">权限被拒绝</string>
    <string name="emptyData">暂无相关数据</string>
    <string name="loading">加载中&#8230;</string>
    <string name="noMoreUpdate">已加载完全部数据</string>
    <string name="pressExit">再按一次退出</string>
    <string name="dataAbnormal">数据异常</string>
    <string name="uploading">上传中</string>
    <string name="uploadFail">上传失败</string>
    <string name="needInstallPerm">需要安装权限</string>
    <string name="downloading">下载中</string>
    <string name="install">安装</string>
    <string name="code">Code</string>
    <string name="code0">成功</string>
    <string name="code_1">失败</string>
    <string name="code200">OK</string>
    <string name="code401">登录信息失效，请重新登录</string>
    <string name="code11001">参数错误</string>
    <string name="code11002">参数类型错误</string>
    <string name="code11003">参数为空</string>
    <string name="code11004">对不起,系统异常</string>
    <string name="code11005">操作非法</string>
    <string name="code12000">验证码发送失败</string>
    <string name="code12001">验证码不能为空</string>
    <string name="code12002">验证码不正确</string>
    <string name="code12003">验证码类型不能为空</string>
    <string name="code12004">验证码应为6位数字</string>
    <string name="code12005">谷歌验证码应为6位数字</string>
    <string name="code1010001">账号不能为空</string>
    <string name="code1010002">密码格式不正确</string>
    <string name="code1010003">邮箱格式不正确</string>
    <string name="code1010004">邮箱地址或手机号不正确</string>
    <string name="code1010005">密码不能为空</string>
    <string name="code1010006">邮箱账号不能为空</string>
    <string name="code1010007">手机区号不能为空</string>
    <string name="code1010008">手机区号格式不正确</string>
    <string name="code1010009">手机号码不能为空</string>
    <string name="code1010010">该账号已注册</string>
    <string name="code1010011">验证码类型不存在</string>
    <string name="code1010012">该邀请码不存在</string>
    <string name="code1010013">对不起,请重试</string>
    <string name="code1010014">注册来源不能为空</string>
    <string name="code1010015">请拉动滑块进行校验</string>
    <string name="code1010016">校验失败,请重试</string>
    <string name="code1020001">该账号不存在</string>
    <string name="code1020002">用户已被禁用,请联系客服</string>
    <string name="code1020003">谷歌验证码错误</string>
    <string name="code1020004">登录密码不正确</string>
    <string name="code1020005">该手机号码已绑定,如需更换,请提交工单</string>
    <string name="code1020006">该邮箱已绑定,如需更换,请提交工单</string>
    <string name="code1030005">昵称长度不得超过20个字</string>
    <string name="code1040001">该身份证号已经绑定</string>
    <string name="code1040002">信息不匹配</string>
    <string name="code1040003">操作类型不能为空</string>
    <string name="code1040004">姓名不能为空</string>
    <string name="code1040005">证件号码不能为空</string>
    <string name="code1040006">国籍不能为空</string>
    <string name="code1040007">请上传人像页照片</string>
    <string name="code1040008">请上传国徽页照片</string>
    <string name="code1040009">请上传手持照片</string>
    <string name="code1040010">您已提交实名审核,请耐心等待</string>
    <string name="code1050001">谷歌验证码不能为空</string>
    <string name="code1050002">该账号已绑定</string>
    <string name="code1060003">防钓鱼码长度不得超过20个字</string>
    <string name="code1070004">API Key备注不能为空</string>
    <string name="code1070005">API Key ID不能为空</string>
    <string name="code1070006">API Key 备注长度不得超过20个字</string>
    <string name="code1070007">API Key 不存在</string>
    <string name="code1070008">每个用户最多可以绑定4个IP</string>
    <string name="code1070009">每个用户最多可以创建5组API Key</string>
    <string name="code1070010">IP地址格式不正确</string>
    <string name="code1080001">账户类型不能为空</string>
    <string name="code1080002">开户银行不能为空</string>
    <string name="code1080003">收款二维码不能为空</string>
    <string name="code1080004">请先完成C1认证</string>
    <string name="code1080005">请先完成C2认证</string>
    <string name="code1080006">账户姓名最多为15个字</string>
    <string name="code1090001">订单ID不能为空</string>
    <string name="code1100002">交易对不存在</string>
    <string name="code1100003">订单不存在</string>
    <string name="code1100004">找不到订单锁定资金的记录</string>
    <string name="code1100005">剩余锁定资金小于0</string>
    <string name="code1110001">请刷新后重试</string>
    <string name="code1210001">币种不能为空</string>
    <string name="code1210002">备注名称不能为空</string>
    <string name="code1210003">提币地址不能为空</string>
    <string name="code1210004">Memo/Tag/Payment ID不能为空</string>
    <string name="code1210005">币种不存在或已禁用</string>
    <string name="code1210006">提币数量不能为空</string>
    <string name="code1210007">修改安全设置不足24小时,暂不允许提币</string>
    <string name="code1210008">该币种暂不支持充值</string>
    <string name="code1210009">该币种暂不支持提现</string>
    <string name="code1210010">单笔提币数量不能小于最小提币限额</string>
    <string name="code1210011">可用余额不足</string>
    <string name="code1210012">提币数量超过今日提币限额,建议提币数量:</string>
    <string name="code1210013">设备类型不能为空</string>
    <string name="code1210014">获取充币地址失败</string>
    <string name="code1210015">提币地址检验失败,请确认无误后重新输入</string>
    <string name="code1210016">账户异常,暂不允许提币</string>
    <string name="code1210017">单笔提币数量不能大于最大提币限额</string>
    <string name="code1210018">手续费大于提币数量,提币失败</string>
    <string name="code1210019">该币种无需Memo/Tag/Payment ID信息</string>
    <string name="code1210020">需绑定手机号才能提币</string>
    <string name="code1210021">法币交易买入USDT不足24H，提币后资产余额不得低于法币交易购买金额</string>
    <string name="code1210022">法币交易买入USDT不足24H，如需提币请先完成C3认证</string>
    <string name="code1210023">当前账户暂不允许提币</string>
    <string name="code1210024">请先完成高级认证</string>
    <string name="code1220001">请至少选择一条记录删除</string>
    <string name="code1230001">账户可用余额不足</string>
    <string name="code1230002">账户冻结余额不足</string>
    <string name="code1230003">冻结失败,请稍后重试</string>
    <string name="code1230004">解冻失败,请稍后重试</string>
    <string name="code1230005">划转失败,请稍后重试</string>
    <string name="code1230006">账户不存在</string>
    <string name="code1240001">配置项编码不能为空</string>
    <string name="code1250001">认证ID不能为空</string>
    <string name="code1250002">您已完成高级认证</string>
    <string name="code1250003">请先完成初级认证</string>
    <string name="code1250004">认证失败，请重试</string>
    <string name="code2010001">订单服务不可用</string>
    <string name="code2010002">请求超时</string>
    <string name="code2010003">交易对不正确</string>
    <string name="code2010004">交易对不存在</string>
    <string name="code2010005">交易对暂停交易</string>
    <string name="code2010006">资金不足</string>
    <string name="code2010007">下单数量过少</string>
    <string name="code2010008">下单数量过大</string>
    <string name="code2010009">下单价格过小</string>
    <string name="code2010010">下单价格过大</string>
    <string name="code2010011">下单总额过大</string>
    <string name="code2010012">委托价不能高于触发价的110%</string>
    <string name="code2010013">委托价不能低于触发价的90%</string>
    <string name="code2010014">订单不存在</string>
    <string name="code2010015">冻结资金不足</string>
    <string name="code2010016">BAR类型错误</string>
    <string name="code2010017">无相关数据</string>
    <string name="code2010018">用户未登录</string>
    <string name="code2010019">分区不存在</string>
    <string name="code2010021">requestId不可为空</string>
    <string name="code2010022">下单总额过小</string>
    <string name="code2010024">买入需要为%s的倍数</string>
    <string name="code2010025">最大持仓数量不得超过%s</string>
    <string name="code2010026">卖出需要为%s的倍数</string>
    <string name="code2010027">交易类型暂未开放</string>
    <string name="code3010001">法币交易市场不支持此币种</string>
    <string name="code3010002">法币类型错误</string>
    <string name="code3010003">支付方式错误</string>
    <string name="code3010004">数量小数位过长</string>
    <string name="code3010005">不具备商家资格，无法发布广告</string>
    <string name="code3010006">发布广告之前请至少绑定一种收付款方式</string>
    <string name="code3020001">只有商家才能发布广告</string>
    <string name="code3020002">广告不存在</string>
    <string name="code3020003">当前广告已完成，不支持编辑</string>
    <string name="code3020004">同类型广告只允许发布一条</string>
    <string name="code3020005">广告剩余数量不足</string>
    <string name="code3020006">广告已下架</string>
    <string name="code3030001">不能与自己发布的广告进行交易</string>
    <string name="code3030002">请先完成C2等级实名认证</string>
    <string name="code3030003">请先绑定手机号码以接收订单信息</string>
    <string name="code3030004">存在未完成订单</string>
    <string name="code3030005">订单价格不在单笔限额内</string>
    <string name="code3030006">订单数量不在单笔限额内</string>
    <string name="code3030007">暂不支持此支付方式</string>
    <string name="code3030008">提交订单失败</string>
    <string name="code3030009">订单确认失败</string>
    <string name="code3030010">取消订单数量已达上限，今日无法进行法币交易</string>
    <string name="code3030011">支付方式未启用</string>
    <string name="code3030012">订单不存在</string>
    <string name="code3030013">卖方不可以取消订单</string>
    <string name="code3030014">订单已提交申诉</string>
    <string name="code3030015">订单数量计算错误</string>
    <string name="code3030016">订单金额计算错误</string>
    <string name="code3030020">法币交易买入USDT不足24H，如需出售请先完成C3认证；</string>
    <string name="code3030021">法币交易买入USDT不足24H，出售后资产余额不得低于法币交易购买金额；</string>
    <string name="code3030022">当前账户暂不允许出售USDT</string>
    <string name="code3030023">中国大陆地区用户需完成高级认证</string>
    <string name="code4010001">不要重复点击</string>
    <string name="code5010001">交易对格式不正确</string>
    <string name="code5010002">ApiKey不存在或已删除</string>
    <string name="code5010003">签名错误或该APIKey状态异常</string>
    <string name="code5010004">订单买卖方向参数错误</string>
    <string name="code5010005">日期格式错误</string>
    <string name="code5010006">查询方向参数错误</string>
    <string name="code5010007">查询记录大于100条</string>
    <string name="code5010008">订单类型错误</string>
    <string name="code5010009">触发价不能为空</string>
    <string name="code5010010">服务器开小差了,请稍后再试一次</string>
    <string name="code5010011">accessKey不能为空</string>
    <string name="code5010012">客户端IP错误</string>
    <string name="code5010013">撤单失败</string>
    <string name="code5010014">市价买入,买入总额不能为空</string>
    <string name="code5020001">游戏未注册</string>
    <string name="code5020002">请先设置游戏昵称</string>
    <string name="code5030002">该数据已经删除</string>
    <string name="foreContract">预测合约</string>
    <string name="foreContractTips">高收益 低门槛 分钟结算</string>
    <string name="gameZone">游戏专区</string>
    <string name="gameZoneTips">最丰富 最好玩的网页游戏</string>
    <string name="price">价格</string>
    <string name="amount">数量</string>
    <string name="time">时间</string>
    <string name="orderMoney">下单金额</string>
    <string name="deliverMoney">已交割金额</string>
    <string name="status">状态</string>
    <string name="deliverPart">部分交割</string>
    <string name="closePre">收盘价/前收价</string>
    <string name="deliveryEntrust">交割/委托</string>
    <string name="directionResult">方向/结果</string>
    <string name="str_login_title">登录DiBi</string>
    <string name="str_edit_phone_number_or_email">请输入手机号码或邮箱地址</string>
    <string name="str_edit_password">请输入登录密码</string>
    <string name="str_login">登录</string>
    <string name="str_login_hint">您的信息通过256位SGC加密保护安全传输</string>
    <string name="str_forget_psw">忘记密码</string>
    <string name="str_edit_correct_email_or_phone">请输入正确的手机号码或邮箱地址</string>
    <string name="str_edit_correct_psw">密码不正确，请重新输入</string>
    <string name="confirm_two">确&#160;定</string>
    <string name="str_bank">银行卡</string>
    <string name="str_wechat">微信</string>
    <string name="str_alipay">支付宝</string>
    <string name="str_all">全部</string>
    <string name="str_c2c_coin_type">法币币种</string>
    <string name="str_pay_type">支付方式</string>
    <string name="warmTipsColon">温馨提示：</string>
    <string name="c2cTips1">（1）为防止不法分子洗钱行为，用户法币购买的资产若需在24小时内发起提币或出售，其钱包资产余额需高于法币交易购买的等额资产，24小时后无限制。</string>
    <string name="c2cTips2">（2）切记：转账的时候请不要备注购买USDT或者DIC，否则您和商家的账户都有可能被冻结！</string>
    <string name="c2cTips3">（3）法币交易商家在线时间：9:00~23:00</string>
</resources>