<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_entCon"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone">
    <TextView
        android:id="@+id/tv_entHeadTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        android:text="@string/time"
        android:hint="23:58:24"
        android:textSize="11sp"
        android:textColor="@color/gy4C"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_entHeadStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="15dp"
        android:text="@string/status"
        android:hint="@string/deliverPart"
        android:textSize="11sp"
        android:textColor="@color/gy4C"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_entHeadTime"/>
    <TextView
        android:id="@+id/tv_entHeadClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closePre"
        android:textSize="11sp"
        android:textColor="@color/gy4C"
        app:layout_constraintLeft_toRightOf="@id/tv_entHeadTime"
        app:layout_constraintRight_toLeftOf="@+id/tv_entHeadDelivery"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_entHeadTime"/>
    <TextView
        android:id="@+id/tv_entHeadDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliveryEntrust"
        android:textSize="11sp"
        android:textColor="@color/gy4C"
        app:layout_constraintLeft_toRightOf="@id/tv_entHeadClose"
        app:layout_constraintRight_toLeftOf="@+id/tv_entHeadResult"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_entHeadTime"/>
    <TextView
        android:id="@+id/tv_entHeadResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/directionResult"
        android:textSize="11sp"
        android:textColor="@color/gy4C"
        app:layout_constraintLeft_toRightOf="@id/tv_entHeadDelivery"
        app:layout_constraintRight_toLeftOf="@id/tv_entHeadStatus"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_entHeadTime"/>
</androidx.constraintlayout.widget.ConstraintLayout>