<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/sp3_solid_brown_f4">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:drawableStart="@mipmap/exclamation_orange"
        android:drawablePadding="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/warmTipsColon"
        android:textSize="12sp"
        android:textColor="@color/redE0"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="2dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/c2cTips1"
        android:textSize="12sp"
        android:textColor="@color/redE0"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="2dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/c2cTips2"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/redE0"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/c2cTips3"
        android:textSize="12sp"
        android:visibility="gone"
        android:textColor="@color/redE0"/>
</LinearLayout>