<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_flowCon"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone">
    <TextView
        android:id="@+id/tv_flowHeadTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        android:text="@string/time"
        android:hint="23:58:24"
        android:textSize="11sp"
        android:textColor="@color/gy4C"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_flowHeadStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="15dp"
        android:text="@string/status"
        android:hint="@string/deliverPart"
        android:textSize="11sp"
        android:textColor="@color/gy4C"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_flowHeadTime"/>
    <TextView
        android:id="@+id/tv_flowHeadMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/orderMoney"
        android:hint="@string/deliverPart"
        android:textSize="11sp"
        android:textColor="@color/gy4C"
        app:layout_constraintLeft_toRightOf="@id/tv_flowHeadTime"
        app:layout_constraintRight_toLeftOf="@id/tv_flowHeadStatus"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_flowHeadTime"/>
</androidx.constraintlayout.widget.ConstraintLayout>