<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_deliverHead"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone">
    <View
        android:id="@+id/l_deliverHead"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/bk2F5"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tv_deliverHeadTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/time"
        android:hint="23:58:24"
        android:textSize="11sp"
        android:textColor="@color/gy4C"
        app:layout_constraintLeft_toRightOf="@id/l_deliverHead"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_deliverHeadStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="15dp"
        android:text="@string/status"
        android:hint="@string/deliverPart"
        android:textSize="11sp"
        android:textColor="@color/gy4C"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_deliverHeadTime"/>
    <TextView
        android:id="@+id/tv_deliverHeadOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:gravity="end"
        android:text="@string/orderMoney"
        android:hint="20000.00"
        android:textSize="11sp"
        android:textColor="@color/gy4C"
        app:layout_constraintLeft_toRightOf="@id/tv_deliverHeadTime"
        app:layout_constraintRight_toLeftOf="@+id/tv_deliverHeadDone"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_deliverHeadTime"/>
    <TextView
        android:id="@+id/tv_deliverHeadDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/deliverMoney"
        android:hint="20000.00"
        android:textSize="11sp"
        android:textColor="@color/gy4C"
        app:layout_constraintLeft_toRightOf="@id/tv_deliverHeadOrder"
        app:layout_constraintRight_toLeftOf="@id/tv_deliverHeadStatus"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_deliverHeadTime"/>
</androidx.constraintlayout.widget.ConstraintLayout>